--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,19 @@ server {
     }
     location /static/  {
     }
-    location ~* ^/(ws|api|admin|docs)/? {
+    location ~* ^/(api|admin|docs)/? {
+        proxy_pass http://soj-backend;
+
+        proxy_http_version 1.1;
+
+        proxy_redirect off;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $server_name;
+    }
+    location ~* ^/ws/? {
         proxy_pass http://soj-backend;
 
         proxy_http_version 1.1;
